<resources>
    <string name="app_name">XcavApp</string>
    <string name="logo">¡Es todo lo que necesitas!</string>
    <string name="XcavApp">XcavApp</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrese">Regístrese</string>
    <string name="registro">Registro</string>
    <string name="repitpassword">Repetir contraseña</string>
    <string name="email">Correo</string>
    <string name="cancel">Cancelar</string>
    <string name="Administrador">Administrador</string>
    <string name="Operador">Operador</string>
    <string name="Retro1">Hitachi 130</string>
    <string name="Retro2">Hitachi 75US</string>
    <string name="title_activity_admin_r1">AdminR1Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bd">De la base de datos!!</string>
    <string name="bdV">De base de datos!! (Volquetas)</string>
    <string name="bdM">De base de datos!! (H Manten)</string>
    <string name="bdT">De base de datos!! (H Trabaj)</string>
    <string name="title_activity_admin_r2">AdminR2Activity</string>
    <string name="title_activity_opera_r1">OperaR1Activity</string>
    <string name="v">Ver HORAS DE OPERADOR</string>
    <string name="vv">Ver VOLQUETA DE OPERADOR</string>
    <string name="mm">MAPA</string>
    <string name="title_activity_opera_r2">OperaR2Activity</string>
    <string name="title_activity_adm_ope_r1">AdmOpeR1Activity</string>
    <string name="title_activity_adm_ope_r2">AdmOpeR2Activity</string>
    <string name="Htrab">Horas trabajadas </string>
    <string name="fecha">Fecha: </string>
    <string name="Hini">Hora inicial: </string>
    <string name="Hfin">Hora final: </string>
    <string name="AddHora">Agregar hora trabajada</string>
    <string name="HMan">Hora de mantenimiento</string>
    <string name="AddHoraM">Agregar hora de mantenimiento</string>
    <string name="ver">Ver horas</string>
    <string name="verh">Ver horas</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="registreseAdm">Registrar administrador</string>
    <string name="registreseOpe">Registrar operador</string>
    <string name="title_activity_maps">Map</string>
    <string name="fec">20/04/2017</string>
    <string name="Thoras">Total de horas: </string>
    <string name="hor">6 hr</string>
    <string name="Tpago">Total a pagar: </string>
    <string name="pag">$ 50.000</string>
    <string name="volq">ERF325</string>
    <string name="via">Número de viajes: </string>
    <string name="nVia">3</string>
    <string name="addVia">Agregar viaje</string>
    <string name="cerrarS">Cerrar sesión</string>
    <string name="addVolq">Agregar volqueta</string>
    <string name="Nviaje">Nuevo viaje</string>
    <string name="Km">Km</string>
    <string name="dist">Distancia</string>
    <string name="add">Agregar</string>
    <string name="placa">Placa</string>
    <string name="cap">Capacidad</string>
    <string name="m2">m3</string>
    <string name="retro">Retroexcavadora</string>

    <string name="facebook_app_id">270322246774267</string>
    <string name="Nombre">Nombre</string>
    <string name="Correo">Correo</string>
</resources>
